# crab-hole

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  config.toml  dockerfile  example-config.toml  openapi.json  rustfmt.toml
.github/workflows/: cross_build.sh  rust.yml
bench/: domains.txt  missing-domains.txt
benches/: blocklist_contains.rs
src/: api.rs  blocklist.rs  logger.rs  main.rs  parser.rs  trie.rs
