[package]
name = "crab-hole"
version = "0.1.6"
edition = "2021"
description = "Pi-Hole clone written in rust using hickory-dns/trust-dns"
repository = "https://github.com/LuckyTurtleDev/crab-hole"
keywords = ["DNS", "BIND", "named", "dnssec"]
license = "AGPL-3.0-or-later"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "config.toml"
]

[features]
# internal debugging feature for the parser
__debug_parser = []

[dependencies]
anyhow = "1.0.70"
ariadne = "0.3"
async-trait = "0.1"
chumsky = "0.9.2"
directories = "5.0.0"
log = "0.4.17"
my-env-logger-style = "0.1.0"
nohash-hasher = "0.2.0"
num-format = "0.4.4"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
poem = "1.3.57"
poem-openapi = { version = "3.0.1", features = ["redoc", "time"] }
qp-trie = "0.8.2"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.21", default-features = false }
rustls-pemfile = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.25"
tokio = { version = "1.27", features = ["fs", "parking_lot", "rt-multi-thread", "macros", "net", "signal"] }
toml = { package = "basic-toml", version = "0.1" }
trust-dns-proto = {  package = "hickory-proto", version = "0.24", default-features = false }
trust-dns-server = { package = "hickory-server", version = "0.24", default-features = false,  features = ["dnssec-ring", "dns-over-rustls", "dns-over-https-rustls", "dns-over-quic"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.1"
jemallocator = "0.5"
jemalloc-sys = { version = "0.5", features = ["stats"] }

[build-dependencies]
rustc_version = "0.4.0"
