[package]
name = "crab-hole"
version = "0.1.12"
edition = "2021"
description = "Pi-Hole clone written in rust using hickory-dns/trust-dns"
repository = "https://github.com/LuckyTurtleDev/crab-hole"
keywords = ["DNS", "BIND", "named", "dnssec"]
license = "AGPL-3.0-or-later"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "config.toml",
  "example-config.toml"
]

[features]
default = ["native-roots", "aws-lc-rs"]
native-roots = ["hickory-resolver/rustls-platform-verifier", "reqwest/rustls-tls-native-roots-no-provider"]
webpki-roots = ["hickory-resolver/webpki-roots", "reqwest/rustls-tls-webpki-roots-no-provider"]
ring = ["hickory-server/dnssec-ring", "hickory-server/tls-ring", "hickory-server/https-ring", "hickory-server/quic-ring", "hickory-server/h3-ring"]
aws-lc-rs = ["hickory-server/dnssec-aws-lc-rs", "hickory-server/tls-aws-lc-rs", "hickory-server/https-aws-lc-rs", "hickory-server/quic-aws-lc-rs", "hickory-server/h3-aws-lc-rs"]
# internal debugging feature for the parser
__debug_parser = []

[dependencies]
anyhow = "1.0.70"
ariadne = "0.3"
async-trait = "0.1"
bit-vec = "0.6.3"
chumsky = "0.9.2"
clap = { version = "4.5.22", features = ["derive"] }
directories = "5.0.0"
hickory-proto = { git = "https://github.com/msrd0/trust-dns", branch = "quic-without-ring", default-features = false }
hickory-server = { git = "https://github.com/msrd0/trust-dns", branch = "quic-without-ring", default-features = false, features = ["resolver"] }
hickory-resolver = { git = "https://github.com/msrd0/trust-dns", branch = "quic-without-ring", default-features = false }
log = "0.4.17"
my-env-logger-style = { version = "0.1.1", features = ["custom-arg-formatter"] }
num-format = "0.4.4"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
poem = "1.3.57"
poem-openapi = { version = "3.0.1", features = ["redoc", "time"] }
qp-trie = "0.8.2"
regex = "1.10.2"
reqwest = { version = "0.12.15", default-features = false, features = ["gzip", "http2"] }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.25"
tokio = { version = "1.27", features = ["fs", "parking_lot", "rt-multi-thread", "macros", "net", "signal"] }
toml = { package = "basic-toml", version = "0.1" }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.1"
jemallocator = "0.5"
jemalloc-sys = { version = "0.5", features = ["stats"] }

[build-dependencies]
rustc_version = "0.4.0"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(nightly)']
